@@ -23,46 +23,44 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ReservationServiceTest {
-    
+
     @Mock
     private ReservationRepository reservationRepository;
-    
+
     @Mock
     private BookRepository bookRepository;
-    
+
     @Mock
     private BookService bookService;
-    
+
     @Mock
     private UserService userService;
-    
+
     @InjectMocks
     private ReservationService reservationService;
-    
+
     private User testUser;
     private Book testBook;
     private Reservation testReservation;
-    
+
     @BeforeEach
     void setUp() {
         testUser = new User();
         testUser.setId(1L);
         testUser.setName("Juan Pérez");
         testUser.setEmail("juan@example.com");
-        
+
         testBook = new Book();
         testBook.setExternalId(258027L);
         testBook.setTitle("The Lord of the Rings");
         testBook.setPrice(new BigDecimal("15.99"));
         testBook.setStockQuantity(10);
         testBook.setAvailableQuantity(5);
-        
+
         testReservation = new Reservation();
         testReservation.setId(1L);
         testReservation.setUser(testUser);
@@ -70,73 +68,128 @@ class ReservationServiceTest {
         testReservation.setRentalDays(7);
         testReservation.setStartDate(LocalDate.now());
         testReservation.setExpectedReturnDate(LocalDate.now().plusDays(7));
-        testReservation.setDailyRate(new BigDecimal("15.99"));
-        testReservation.setTotalFee(new BigDecimal("111.93"));
+        testReservation.setDailyRate(new BigDecimal("0.80")); // ejemplo
+        testReservation.setTotalFee(new BigDecimal("5.60"));
         testReservation.setStatus(Reservation.ReservationStatus.ACTIVE);
         testReservation.setCreatedAt(LocalDateTime.now());
     }
-    
+
+
     @Test
     void testCreateReservation_Success() {
-        // TODO: Implementar el test de creación de reserva exitosa
+        ReservationRequestDTO request = new ReservationRequestDTO(
+                1L,
+                258027L,
+                7,
+                LocalDate.now()
+        );
+
+        when(userService.getUserEntity(1L)).thenReturn(testUser);
+        when(bookRepository.findByExternalId(258027L)).thenReturn(Optional.of(testBook));
+        when(reservationRepository.save(any(Reservation.class))).thenReturn(testReservation);
+        when(bookRepository.save(any(Book.class))).thenReturn(testBook);
+
+        ReservationResponseDTO result = reservationService.createReservation(request);
+
+        assertNotNull(result);
+        assertEquals(1L, result.getUserId());
+        assertEquals(258027L, result.getBookExternalId());
+        verify(bookRepository, times(1)).save(any(Book.class));
+        verify(reservationRepository, times(1)).save(any(Reservation.class));
     }
-    
+
     @Test
     void testCreateReservation_BookNotAvailable() {
-        // TODO: Implementar el test de creación de reserva cuando el libro no está disponible
+        testBook.setAvailableQuantity(0);
+
+        ReservationRequestDTO request = new ReservationRequestDTO(
+                1L,
+                258027L,
+                7,
+                LocalDate.now()
+        );
+
+        when(userService.getUserEntity(1L)).thenReturn(testUser);
+        when(bookRepository.findByExternalId(258027L)).thenReturn(Optional.of(testBook));
+
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> reservationService.createReservation(request));
+
+        assertTrue(ex.getMessage().contains("No hay ejemplares disponibles"));
     }
-    
+
+
     @Test
     void testReturnBook_OnTime() {
-        // TODO: Implementar el test de devolución de libro en tiempo
+        ReturnBookRequestDTO request = new ReturnBookRequestDTO();
+        request.setReturnDate(testReservation.getExpectedReturnDate());
+
+        when(reservationRepository.findById(1L)).thenReturn(Optional.of(testReservation));
+        when(reservationRepository.save(any(Reservation.class))).thenReturn(testReservation);
+
+        ReservationResponseDTO result = reservationService.returnBook(1L, request);
+
+        assertNotNull(result);
+        assertEquals(BigDecimal.ZERO, result.getLateFee());
+        assertEquals(Reservation.ReservationStatus.RETURNED, result.getStatus());
+        verify(bookRepository, times(1)).save(any(Book.class));
     }
-    
+
     @Test
     void testReturnBook_Overdue() {
-        // TODO: Implementar el test de devolución de libro con retraso
+        ReturnBookRequestDTO request = new ReturnBookRequestDTO();
+        request.setReturnDate(testReservation.getExpectedReturnDate().plusDays(3));
+
+        when(reservationRepository.findById(1L)).thenReturn(Optional.of(testReservation));
+        when(reservationRepository.save(any(Reservation.class))).thenReturn(testReservation);
+
+        ReservationResponseDTO result = reservationService.returnBook(1L, request);
+
+        assertNotNull(result);
+        assertEquals(Reservation.ReservationStatus.RETURNED, result.getStatus());
+        assertTrue(result.getLateFee().compareTo(BigDecimal.ZERO) > 0);
+        verify(bookRepository, times(1)).save(any(Book.class));
     }
-    
+
+
     @Test
     void testGetReservationById_Success() {
         when(reservationRepository.findById(1L)).thenReturn(Optional.of(testReservation));
-        
+
         ReservationResponseDTO result = reservationService.getReservationById(1L);
-        
+
         assertNotNull(result);
         assertEquals(testReservation.getId(), result.getId());
     }
-    
+
     @Test
     void testGetAllReservations() {
-        Reservation reservation2 = new Reservation();
-        reservation2.setId(2L);
-        
-        when(reservationRepository.findAll()).thenReturn(Arrays.asList(testReservation, reservation2));
-        
+        Reservation r2 = new Reservation();
+        r2.setId(2L);
+
+        when(reservationRepository.findAll()).thenReturn(Arrays.asList(testReservation, r2));
+
         List<ReservationResponseDTO> result = reservationService.getAllReservations();
-        
-        assertNotNull(result);
+
         assertEquals(2, result.size());
     }
-    
+
     @Test
     void testGetReservationsByUserId() {
-        when(reservationRepository.findByUserId(1L)).thenReturn(Arrays.asList(testReservation));
-        
+        when(reservationRepository.findByUserId(1L)).thenReturn(List.of(testReservation));
+
         List<ReservationResponseDTO> result = reservationService.getReservationsByUserId(1L);
-        
-        assertNotNull(result);
+
         assertEquals(1, result.size());
     }
-    
+
     @Test
     void testGetActiveReservations() {
         when(reservationRepository.findByStatus(Reservation.ReservationStatus.ACTIVE))
-                .thenReturn(Arrays.asList(testReservation));
-        
+                .thenReturn(List.of(testReservation));
+
         List<ReservationResponseDTO> result = reservationService.getActiveReservations();
-        
-        assertNotNull(result);
+
         assertEquals(1, result.size());
     }
 }
